Added missing images & updated URLs

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -241,8 +241,8 @@
         <footer class="footer">
             <p>&copy; 2025 Sharjeel. Built with CSS Grid.</p>
             <div class="socials">
-                <a href="#"><img src="InBug-White.png" alt="linkedin logo" width="20"></a>
-                <a href="#"><img src="download-removebg-preview.png" alt="Github logo" width="20" height="20"
+                <a href="https://www.linkedin.com/in/sharjeel-arshad-dev/" target="_blank"><img src="InBug-White.png" alt="linkedin logo" width="20"></a>
+                <a href="https://github.com/SharjeelArshad0220" target="_blank"><img src="download-removebg-preview.png" alt="Github logo" width="20" height="20"
                         style="background-color: #ffffff; border-radius: 3px;"></a>
             </div>
         </footer>
